# src/main/scala/nl/pragmasoft/catracker/ApiHandler.scala
@@ -2,18 +2,20 @@ package nl.pragmasoft.catracker
 
 import akka.actor.typed.ActorSystem
 import cats.Applicative
+import cats.effect.Async
 import cats.implicits._
 import com.typesafe.scalalogging.LazyLogging
+import io.circe.Json
 import nl.pragmasoft.catracker.Model.{PositionRepository, StoredPosition}
 import nl.pragmasoft.catracker.TrackerProtocol.UpdatePosition
-import nl.pragmasoft.catracker.http.definitions.{DevicePath, TtnEvent}
-import nl.pragmasoft.catracker.http.{Handler, IncomingEventResponse, PathForDeviceResponse}
+import nl.pragmasoft.catracker.http.definitions.{DevicePath, KpnEventRecord, TtnEvent}
+import nl.pragmasoft.catracker.http.{Handler, IncomingEventKpnResponse, IncomingEventTtnResponse, PathForDeviceResponse}
 
 import java.time.{LocalDateTime, ZoneOffset}
 import java.util.concurrent.TimeUnit
 import scala.concurrent.duration._
 
-class ApiHandler[F[_]: Applicative](positions: PositionRepository[F], system: ActorSystem[TrackerProtocol.Command]) extends Handler[F] with LazyLogging {
+class ApiHandler[F[_]: Applicative: Async](positions: PositionRepository[F], system: ActorSystem[TrackerProtocol.Command]) extends Handler[F] with LazyLogging {
   def pathForDevice(respond: PathForDeviceResponse.type)(device: String): F[PathForDeviceResponse] =
     for {
       lastPositions <- positions.findForDevice(device)
@@ -41,7 +43,7 @@ class ApiHandler[F[_]: Applicative](positions: PositionRepository[F], system: Ac
   private val units   = List((TimeUnit.DAYS, "d"), (TimeUnit.HOURS, "h"), (TimeUnit.MINUTES, "m"))
   private val JustNow = (1 minute).toMillis
 
-  def incomingEvent(respond: IncomingEventResponse.type)(e: TtnEvent): F[IncomingEventResponse] = {
+  def incomingEventTtn(respond: IncomingEventTtnResponse.type)(e: TtnEvent): F[IncomingEventTtnResponse] = {
     val gw = e.metadata.gateways.maxBy(_.snr)
     val p  = e.payloadFields
     val position = StoredPosition(
@@ -63,6 +65,37 @@ class ApiHandler[F[_]: Applicative](positions: PositionRepository[F], system: Ac
 
     for {
       _ <- positions.add(position)
-    } yield IncomingEventResponse.Created
+    } yield IncomingEventTtnResponse.Created
   }
+
+
+  def incomingEventKpn(respond: IncomingEventKpnResponse.type)(body: Vector[KpnEventRecord]): F[IncomingEventKpnResponse] = {
+
+
+
+//    KpnEvent.decodeKPNEvent(body)
+//
+//    val position = StoredPosition(
+//      recorded = gw.time.toInstant.toEpochMilli,
+//      app = e.appId,
+//      deviceType = e.devId,
+//      deviceSerial = e.hardwareSerial,
+//      latitude = p.latitude,
+//      longitude = p.longitude,
+//      positionFix = p.gnssFix,
+//      bestGateway = gw.gtwId,
+//      bestSNR = gw.snr,
+//      accuracy = p.accuracy,
+//      battery = p.capacity.toInt,
+//      temperature = p.temperature,
+//      counter = e.counter
+//    )
+//    system ! UpdatePosition(position)
+//
+//    for {
+//      _ <- positions.add(position)
+//    } yield IncomingEventResponse.Created
+    Async[F].pure(IncomingEventKpnResponse.Created)
+  }
+
 }
